# external-compute-orgo

./: .env.example  CONTRIBUTING.md  LICENSE  Makefile  README.md  agent_loop.py  benchmark.py  cli.py  demo.py  harness.py  openapi.yaml  platform_server.py  pyproject.toml  requirements.txt  tools.py
.github/workflows/: ci.yml
external_compute/: __init__.py  miosa_provider.py  orgo_provider.py  provider.py  terminal.py
results/: orgo-benchmark.json
tests/: conftest.py  test_orgo_provider.py  test_tools.py
typescript/: README.md  agent.ts  demo.ts  package.json  tsconfig.json
typescript/src/: orgo.ts  provider.ts  tools.ts
