[project]
name = "miosa-external-compute"
version = "0.1.0"
description = "Plug Orgo computers into MIOSA and orchestrate them with MIOSA's agent, a hosted model, or your own harness."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "MIOSA" }]
dependencies = ["requests>=2.31.0"]

[project.optional-dependencies]
miosa = ["miosa>=1.2.1"]
server = ["flask>=3.0.0", "python-dotenv>=1.0.0"]

[project.urls]
Homepage = "https://miosa.ai"
Documentation = "https://miosa.ai/docs/integrations/external-computers"
Repository = "https://github.com/Miosa-osa/external-compute-orgo"

[tool.setuptools]
packages = ["external_compute"]
py-modules = ["harness", "demo", "benchmark", "platform_server"]
